# monique

./: PKGBUILD  PKGBUILD.sh  README.md  pyproject.toml
src/monique/: daemon.py  hyprland.py  models.py  properties_panel.py  window.py
