[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monique"
version = "0.5.0"
description = "MONitor Integrated QUick Editor — graphical monitor configurator for Hyprland and Sway with drag-and-drop and auto-profile daemon"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.46",
]

[project.optional-dependencies]
udev = ["pyudev>=0.24"]

[project.scripts]
monique = "monique.app:main"
moniqued = "monique.daemon:main"

[tool.setuptools.packages.find]
where = ["src"]
